# Hindsight

./: .gitattributes  .gitignore  .prettierignore  LICENSE  README.en.md  README.ja.md  README.md  README.pt.md  README.zh.md  TODO.md  eslint.config.js  index.html  latest.json  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README.ja.md  README.pt.md  README.zh-TW.md  README.zh.md  RELEASE.md  TODO.md
docs/design/: cloud-insight.md  screen-memory.md
docs/internal/: README.md  TODO.md  local-multi-device-test.md
docs/release-notes/: 0.4.2-beta.md  CLAUDE.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.3-beta.md  v0.4.4-beta.md  v0.4.5-beta.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.4.md  v0.5.5.md  v0.5.6.md  v0.5.61.md  v0.5.62.md  v0.5.7.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md  v0.6.5.md  v0.6.6.md  v0.6.7.md  v0.6.8.md  v0.7.0.md  v0.7.1.md  v0.7.10.md  v0.7.2.md  v0.7.3.md  v0.7.4.md  v0.7.5.md  v0.7.6-beta.md  v0.7.6.md  v0.7.7.md  v0.7.8.md  v0.7.9.md  v0.8.0.md  (+13 more)
scripts/: macos-mem-watch.sh  migrate-quick-variants.mjs  release.mjs  rename-msi.mjs
scripts/demo/: demo.py
scripts/poc/: l1-dedup-eval.py  l1-phash-poc.py  l2-ocr-accuracy-poc.py  ocr-cli.swift  test_siliconflow_vl.py
src/: App.tsx  main.tsx
src-tauri/: .rustfmt.toml  Cargo.toml  Info.plist  build.rs  entitlements.plist  rust-toolchain.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: builtin_categories.en.json  builtin_categories.ja.json  builtin_categories.zh.json  cross_os_app_aliases.json
src-tauri/examples/: xcap_diag.rs
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer_hooks.nsh
src-tauri/resources/: recommended-models.json
src-tauri/resources/models/: mobilenet_v3_small.onnx
src-tauri/resources/prompts/: image_describe_en.md  image_describe_ja.md  image_describe_pt.md  image_describe_tw.md  image_describe_zh.md  system_en.md  system_ja.md  system_pt.md  system_tw.md  system_zh.md  weekly_en.md  weekly_ja.md  weekly_pt.md  weekly_tw.md  weekly_zh.md
src-tauri/resources/runtime/: .gitkeep
src-tauri/scripts/: fetch-onnxruntime.ps1  fetch-onnxruntime.sh
src-tauri/src/: account.rs  bootstrap.rs  db.rs  device.rs  error.rs  lib.rs  main.rs  platform.rs  quick_summary.rs
src-tauri/src/ai/: auto_summary.rs  binary.rs  config.rs  dedup.rs  embedding.rs  embedding_runtime.rs  image.rs  job_guard.rs  llm.rs  mod.rs  models.rs  ocr.rs  ocr_patch.rs  ocr_vision.rs  platform.rs  prompt.rs  recommended.rs  server.rs  summary.rs  summary_operations.rs  summary_overrides.rs  summary_progress.rs  summary_runner.rs  visual.rs  weekly_runner.rs
src-tauri/src/capture/: browser_url.rs  bundle.rs  mod.rs  privacy.rs  screenshot.rs  screenshot_macos.rs  service.rs  window.rs
src-tauri/src/capture/browser_url/: macos.rs  mod.rs  windows.rs
src-tauri/src/chat/: engine.rs  lang.rs  llm.rs  mod.rs  store.rs  tools.rs
src-tauri/src/commands/: ai.rs  ai_binary.rs  ai_endpoint.rs  ai_engine.rs  ai_models.rs  ai_summary.rs  app_groups.rs  auth.rs  capture.rs  categories.rs  chat.rs  data.rs  devices.rs  export.rs  icons.rs  insight.rs  mod.rs  quick_summary.rs  screen_memory.rs  settings.rs  storage.rs  super_categories.rs  sync.rs
src-tauri/src/icons/: macos_impl.rs  mod.rs  windows_impl.rs
src-tauri/src/insight/: mod.rs  vlm.rs
src-tauri/src/memory/: clusters.rs  digest.rs  frames.rs  mod.rs  resident.rs  sessions.rs
src-tauri/src/permissions/: macos_impl.rs  mod.rs  windows_impl.rs
src-tauri/src/repo/: activities.rs  ai_summaries.rs  app_groups.rs  app_icons.rs  builtin_categories.rs  categories.rs  cross_os_aliases.rs  devices.rs  embeddings.rs  mod.rs  outbox.rs  process_paths.rs  reports.rs  settings.rs  super_categories.rs  test_util.rs
src-tauri/src/storage/: migrations.rs  mod.rs  pool.rs
src-tauri/src/sync/: auth.rs  auth_callback.rs  config.rs  drive.rs  engine.rs  mod.rs  payload.rs
src-tauri/src/sync/engine/: datasets.rs  e2e_tests.rs  io.rs  mod.rs  pull.rs  push.rs
src-tauri/wix/: main.wxs
src/api/: hindsight.ts
src/components/AppDetailDrawer/: AppDetailDrawer.module.css  AppDetailDrawer.tsx
src/components/AppIcon/: AppIcon.module.css  AppIcon.tsx
src/components/AppStack/: AppStack.module.css  AppStack.tsx
src/components/EmptyHint/: EmptyHint.tsx  (+1 more)
src/config/: categories.ts  categoryIcons.ts  nav.ts
src/hooks/: createUsageCache.ts  useAppDetail.ts  useCaptureStatus.ts  useClickOutsideBars.ts  useDayCache.ts  useFocusTrap.ts  useHourApps.ts  useMonthCache.ts  useMouseGlow.ts  usePeriodInsights.ts  usePeriodNavigation.ts  usePeriodRankings.tsx  usePicker.ts  useSelectedDayApps.ts  useSuperCategoryBreakdown.ts  useTheme.ts  useWeekCache.ts
src/i18n/: index.ts  useLocale.ts
src/layouts/: AppLayout.module.css  AppLayout.tsx
src/lib/: aiErrors.ts  aiPrompts.ts  logger.ts  ocrRuntime.ts  releaseNotes.test.ts  releaseNotes.ts  theme.ts  usageExport.test.ts  usageExport.ts  usageXlsx.test.ts  usageXlsx.ts
src/pages/: AI.tsx  AISettings.module.css  AISettings.tsx  AISummary.module.css  AISummary.tsx  Devices.tsx  Month.tsx  Page.module.css  Settings.tsx  Sync.tsx  Today.tsx  Week.tsx
src/state/: README.md  categories.tsx  dailySummary.ts  deviceFilter.tsx  modelDownloads.ts  settings.tsx  superCategories.tsx  updater.tsx  weeklySummary.ts
src/styles/: global.css  tokens.css  utilities.css
src/types/: nav.ts
src/utils/: categoryColor.ts  categoryName.test.ts  categoryName.ts  defaultSegments.ts  displayName.test.ts  displayName.ts  duration.ts  lru.test.ts  lru.ts  screenshotTime.test.ts  screenshotTime.ts  segmentColor.test.ts  segmentColor.ts  viewTransition.ts
web/: README.md  index.html  styles.css  vite.config.ts
web/demo/: index.html
web/demo-src/: AppDemo.module.css  AppDemo.tsx  api-mock.ts  fixtures.ts  index.html  main-demo.tsx  mobile-overrides.css  persistence.ts  tsconfig.json
web/en/: index.html
web/ja/: index.html
web/pt/: index.html
web/tw/: index.html
(+879 files in other folders)
