[package]
name = "hindsight"
version = "0.4.4-beta"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "hindsight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.4"

# Phase 1
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

# 应用图标提取
sysinfo = "0.32"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Phase 2 - 云同步认证
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
keyring = "3"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2"
open = "5"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

# Phase 1B - 本地 AI 引擎下载与解压
# zip 走 deflate（llama.cpp Windows 包用的就是这个），其它压缩算法用不到，关掉省体积
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
# 流式下载：reqwest::Response::bytes_stream() + StreamExt::next()
futures-util = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "wingdi", "errhandlingapi", "libloaderapi", "dwmapi", "jobapi2", "processthreadsapi", "handleapi"] }
# UI Automation：从浏览器地址栏抠 URL，给隐私过滤用
uiautomation = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
icns = "0.3"

# Unix（Linux + macOS）：子进程保护用 setpgid + （Linux）prctl PDEATHSIG
[target.'cfg(unix)'.dependencies]
libc = "0.2"
