[package]
name = "hindsight"
version = "0.7.3"
description = "Privacy-first activity tracking and AI summaries for desktop"
authors = ["Tomotsugu-dev <heroburnning@gmail.com>"]
edition = "2021"

[lib]
name = "hindsight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.4"

# Phase 1
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

# 应用图标提取
sysinfo = "0.32"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Phase 2 - 云同步认证
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2"
open = "5"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

# Phase 1B - 本地 AI 引擎下载与解压
# zip 走 deflate（llama.cpp Windows 包用的就是这个），其它压缩算法用不到，关掉省体积
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
# 流式下载：reqwest::Response::bytes_stream() + StreamExt::next()
futures-util = "0.3"

# Phase 1C - 截图 embedding 去重（MobileNet v3 small via ONNX Runtime）
# load-dynamic 让 ort 运行时找 onnxruntime DLL（不静态链 → 跨平台 ship 友好）；
# ndarray feature 让 ort::value::Value 接受 ndarray::Array 输入。
# default-features 关闭以避开 cuda/dml 这些重型默认 backends，CPU EP 默认就有。
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"] }
ndarray = "0.16"
# 并行 image preprocess：JPEG 解码 + resize + normalize 占大头，单线程跑 5-10s/几百张，
# 8 核并行后 1-2s 搞定。仅在 ai::embedding 用，不污染其它 hot path。
rayon = "1"
sys-locale = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "wingdi", "errhandlingapi", "libloaderapi", "dwmapi", "jobapi2", "processthreadsapi", "handleapi", "winreg", "winnt"] }
# UI Automation：从浏览器地址栏抠 URL，给隐私过滤用
uiautomation = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
icns = "0.3"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSRunningApplication", "NSWorkspace"] }
screencapturekit = { version = "2.1", features = ["macos_14_0"] }

# Unix（Linux + macOS）：子进程保护用 setpgid + （Linux）prctl PDEATHSIG
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# CI / 本地开发期 lint。新成员加进来时 clippy 即报，不再依赖手动审计。
# 不开 needless_pass_by_value：Tauri callback 强制按值签名（MenuEvent / TrayIconEvent）、
# Tauri 命令参数惯例用 String（避免 lifetime 噪音），开了也是噪声多于收益。
[lints.clippy]
ptr_arg = "warn"

# 发布构建瘦身：lto + opt=z + 单 codegen unit + strip + abort，
# 比默认 release 小 ~15-20%。panic=abort 失效 catch_unwind（项目未用）。
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = "symbols"
panic = "abort"
