[package]
name = "hindsight"
version = "0.8.5"
description = "Privacy-first activity tracking and AI summaries for desktop"
authors = ["Tomotsugu-dev <heroburnning@gmail.com>"]
edition = "2021"

[lib]
name = "hindsight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# image-png：托盘 template 图标（tray-icon-macos.png）经 Image::from_bytes 解码用
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.4"

# Phase 1
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

# 应用图标提取
sysinfo = "0.32"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Phase 2 - 云同步认证
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2"
open = "5"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

# Phase 1B - 本地 AI 引擎下载与解压
# zip 走 deflate（llama.cpp Windows 包用的就是这个），其它压缩算法用不到，关掉省体积
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
# 流式下载：reqwest::Response::bytes_stream() + StreamExt::next()
futures-util = "0.3"

# OCR（PP-OCRv5 via ONNX Runtime）
# load-dynamic 让 ort 运行时找 onnxruntime DLL（不静态链 → 跨平台 ship 友好）；
# ndarray feature 让 ort::value::Value 接受 ndarray::Array 输入。
# default-features 关闭避开 cuda 等重型 backends;directml 只是注册入口(几 KB),
# 运行时 dll 带不带 DML 决定实际能否上 GPU——不带时注册失败自动回退 CPU。
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray", "directml"] }
ndarray = "0.16"
sys-locale = "0.3"
fast_image_resize = "6.0.0"
onnx-protobuf = "0.2.3"
protobuf = "=3.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "wingdi", "errhandlingapi", "libloaderapi", "dwmapi", "jobapi2", "processthreadsapi", "handleapi", "winreg", "winnt", "winbase"] }
# UI Automation：从浏览器地址栏抠 URL，给隐私过滤用
uiautomation = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
icns = "0.3"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSRunningApplication", "NSWorkspace", "NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphics"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSData", "NSDictionary", "NSArray", "NSURL", "NSError", "NSEnumerator", "NSValue", "NSRange"] }
# 系统 Vision framework OCR(ANE)——macOS 原生引擎,零模型下载、零 onnxruntime 依赖
objc2-vision = "0.3"
screencapturekit = { version = "2.1", features = ["macos_14_0"] }

# Unix（Linux + macOS）：子进程保护用 setpgid + （Linux）prctl PDEATHSIG
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# CI / 本地开发期 lint。新成员加进来时 clippy 即报，不再依赖手动审计。
# 不开 needless_pass_by_value：Tauri callback 强制按值签名（MenuEvent / TrayIconEvent）、
# Tauri 命令参数惯例用 String（避免 lifetime 噪音），开了也是噪声多于收益。
[lints.clippy]
ptr_arg = "warn"

# dev 下依赖库按 O2 编译（主 crate 仍 O0 可调试）：OCR 的 JPEG 解码/缩放/
# 归一化走 image/ndarray 等重型库，无优化时慢 10-50 倍，会把 GPU 推理的
# 加速完全淹没——"npm run tauri dev 里 OCR 巨慢、负载全在 CPU"就是它。
# 依赖只编一次，日常增量编译速度不受影响。
[profile.dev.package."*"]
opt-level = 2

# 主 crate dev 下开 O1:OCR 的像素热点(归一化/裁行)与 ndarray/fast_image_resize
# 的泛型单态化都编译在主 crate 里,O0 下慢 30+ 倍(实测 det norm 29→946ms),
# 把 GPU 的提速全部吞掉。O1 保留调试体验,热点恢复到 release 的一半以上。
[profile.dev]
opt-level = 1

# 发布构建瘦身：lto + opt=z + 单 codegen unit + strip + abort，
# 比默认 release 小 ~15-20%。panic=abort 失效 catch_unwind（项目未用）。
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = "symbols"
panic = "abort"
